--- a/package.json
+++ b/package.json
@@ -1,7 +1,26 @@
 {
-  "name": "rfr",
-  "version": "0.1.0",
-  "private": true,
+  "name": "climate-visualization-platform",
+  "version": "1.0.0",
+  "description": "Climate Change Data Visualization Platform for SDG 13: Climate Action using 100% free and open-source tools",
+  "author": "Community Contributors",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/yourusername/climate-visualization-platform"
+  },
+  "keywords": [
+    "climate-change",
+    "data-visualization",
+    "sdg-13",
+    "climate-action",
+    "open-source",
+    "nextjs",
+    "typescript",
+    "leaflet",
+    "chartjs",
+    "tensorflow"
+  ],
+  "private": false,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -9,19 +28,33 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@tensorflow/tfjs": "^4.22.0",
+    "axios": "^1.12.2",
+    "chart.js": "^4.5.0",
+    "d3": "^7.9.0",
+    "date-fns": "^4.1.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.3",
+    "leaflet": "^1.9.4",
+    "next": "15.5.4",
+    "papaparse": "^5.5.3",
     "react": "19.1.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "19.1.0",
-    "next": "15.5.4"
+    "react-leaflet": "^5.0.0"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@eslint/eslintrc": "^3",
+    "@tailwindcss/postcss": "^4",
+    "@types/d3": "^7.4.3",
+    "@types/leaflet": "^1.9.20",
     "@types/node": "^20",
+    "@types/papaparse": "^5.3.16",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
     "eslint": "^9",
     "eslint-config-next": "15.5.4",
-    "@eslint/eslintrc": "^3"
+    "tailwindcss": "^4",
+    "typescript": "^5"
   }
 }
